tests/bad/nonlinear_let.ppl
data Nat = Succ Nat | Zero;

let n = Zero in (let a = n in let b = n in ())
